--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,4 +8,5 @@
     <string name="full_time">Temps plein</string>
     <string name="search_hint">Recherche</string>
     <string name="logo">logo</string>
+    <string name="allMenu">Menu</string>
 </resources>
