--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="full_time">Full Time</string>
     <string name="search_hint">Search</string>
     <string name="logo">logo</string>
+    <string name="allMenu">Menu</string>
 </resources>
