See Job Offer page functionnal, adding link to the offer online in webview

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,5 +10,7 @@
     <string name="logo">logo</string>
     <string name="allMenu">Menu</string>
     <string name="offer_location">lieu</string>
+    <string name="type">Temps Plein</string>
+
 
 </resources>
