--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,4 +9,6 @@
     <string name="search_hint">Recherche</string>
     <string name="logo">logo</string>
     <string name="allMenu">Menu</string>
+    <string name="description">Description</string>
+    <string name="notFound">Aucun job trouvé ...</string>
 </resources>
