--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="search_hint">Search</string>
     <string name="logo">logo</string>
     <string name="allMenu">Menu</string>
+    <string name="description">Description</string>
+    <string name="notFound">No job found ...</string>
 </resources>
